--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,20 @@
 /* Add CSS Styling */
+.odd-numbered {
+  background-color: #ffa6a7;
+  font-family: Verdana, 'DejaVu Sans', sans-serif;
+}
+
+#second-element {
+  color: rgb(0, 0, 255);
+  font-size: 36px;
+}
+
+.odd-numbered#third-element {
+  font-size: 24px;
+}
+
+#fourth-element {
+  background-color: rgb(0, 255, 0);
+  font-size: 24px;
+  font-weight: 700;
+}
