Completing the 2. exercise of the foundations block and inline course
I have successfully completed the second exercise of the foundations/block-and-inline course by editing the style.css

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -11,17 +11,23 @@ body {
 
 .title {
   background: #e3f4ff;
+  margin: 0 0 40;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 40px 0;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  margin: auto;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin: 20px auto;
 }
